# fireplace

./: .gitignore  CMakeLists.txt  LICENSE
emulator/: CMakeLists.txt
emulator/core/: CMakeLists.txt  emulator.c  main.c
emulator/soc/: CMakeLists.txt  memmap.c  soc.c
emulator/soc/fb/: fb.c
emulator/soc/gpio/: exynos_gpio.c  gpio_alive.c
emulator/soc/hardware_buttons/: hardware_buttons.c
emulator/soc/speedy/: speedy.c
emulator/soc/uart/: uart.c
emulator/soc/usb/: usb.c
gui/: CMakeLists.txt  gui_core.c
include/: CMakeLists.txt
include/fireplace/core/: core.h  emulator.h  macros.h
include/fireplace/gui/: gui.h
include/fireplace/soc/: memmap.h  peripherals.h  soc.h
include/fireplace/soc/fb/: fb.h
include/fireplace/soc/gpio/: exynos_gpio.h  gpio_alive.h
include/fireplace/soc/hardware_buttons/: hardware_buttons.h
include/fireplace/soc/speedy/: speedy.h
include/fireplace/soc/uart/: uart.h
include/fireplace/soc/usb/: usb.h
